tests/ui/common/function_missing_function.stderr
error: missing required `function` argument
 --> tests/ui/common/function_missing_function.rs:4:22
  |
4 | unsafe extern "C" fn missing_target(value: i32) -> i32 {
  |                      ^^^^^^^^^^^^^^
